# COLPALI-SEC-Filings

./: README.md  pyproject.toml  streamlit.py
output/SEC_EDGAR_FILINGS/GOOG-2024/: metadata.json
pages/: chat.py
sec_project/: backend.py  dev.ipynb  streamlit.py
sec_project/colpali_utils/: __init__.py  interpretability.py  model.py  process.py
sec_project/sec_utils/: __init__.py  sec_filings_to_pdf.py  sec_main.py
